test/org/midica/testfiles/failing/chord-name-like-percussion.midica
INCLUDE_FILE inc/instruments.midica
CHORD hhc c,d,e
